Deprecated since Java 9, or so I am being told.